# swir-3rd_party

./: CMakeLists.txt  README.md
cfitsio/: CMakeLists.txt
netcdf/: CMakeLists.txt
zlib/: CMakeLists.txt
